install/kubernetes/ingress/bookinfo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bookinfo-ingress
  namespace: istio-system
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/app-root: /force/forcegraph.html
spec:
  rules:
  - host: ingress.bookinfo.com
    http:
      paths:
      - backend:
          serviceName: servicegraph
          servicePort: 8088
        path: /
