install/kubernetes/ingress/test-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: istio-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ingress.test.com
    http:
      paths:
      - backend:
          serviceName: servicegraph
          servicePort: 8088
        path: /bar
      - backend:
          serviceName: istio-ingressgateway
          servicePort: 80
        path: /foo
